2011-06-01  David Carson  <dacarson@apple.com>

        Reviewed by Antti Koivisto.

        https://bugs.webkit.org/show_bug.cgi?id=61831
        If width and height of an iframe is fixed and should not be visible, then
        it shouldn't be flattened.

        Test: fast/frames/flattening/iframe-flattening-fixed-width-and-height-zero-size.html

        * rendering/RenderIFrame.cpp:
        (WebCore::RenderIFrame::flattenFrame): add a check for a zero width or height

2011-06-02  Aparna Nandyal  <aparna.nand@wipro.com>

        Reviewed by Andreas Kling.

        [Qt] Multiple drop events when doing DnD of images.
        https://bugs.webkit.org/show_bug.cgi?id=61504

        Duplicate entries of the url were getting added into drag data
        which is removed. The duplicate entries were causing the same image
        url to be copied twice. The code changes now match other webkit ports.

        * platform/qt/ClipboardQt.cpp:
        (WebCore::ClipboardQt::declareAndWriteDragImage):

2011-05-31  Rafael Brandao  <rafael.lobo@openbossa.org>

        Reviewed by Andreas Kling.

        [Qt] tst_QWebFrame::render() failing
        https://bugs.webkit.org/show_bug.cgi?id=60893

        Due a problem on QPicture (http://bugreports.qt.nokia.com/browse/QTBUG-19496),
        this test was calculating the final geometry incorrectly. As the order between
        a translate and a draw operation could be relevant for it, but not for the
        final rendered result, they were changed on ScrollbarThemeQt::paint.

        * platform/qt/ScrollbarThemeQt.cpp:
        (WebCore::ScrollbarThemeQt::paint):

2011-05-31  B.J. Wever  <skylined@chromium.org>

        Reviewed by Adam Barth.

        requestFileSystem and resolveLocalFileSystemURI are not checking if
        errorCallback is NULL before scheduling a callback on error.
        https://bugs.webkit.org/show_bug.cgi?id=49539

        Test: fast/filesystem/filesystem-no-callback-null-ptr-crash.html
