@@ -1,3 +1,12 @@
+2011-06-02  Andreas Kling  <kling@webkit.org>
+
+        Rubber-stamped by Simon Hausmann.
+
+        Remove Qt's precompiled header hack as it was broken, and was not even
+        used unless building WebKit inside a Qt tree.
+
+        * WebKit_pch.h: Removed.
+
 2011-06-01  Andreas Kling  <kling@webkit.org>
 
         Reviewed by Benjamin Poulain.
